--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,13 @@
    clear: both;
  }
 
+ html {
+   background: rgba(39,58,75,.97);
+   color: white;
+   font-family: 'Open Sans', sans-serif;
+   display: block;
+ }
+
  .modal-background {
    position: fixed;
    top: 0;
@@ -54,6 +61,25 @@
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
  }
 
+.login-signup {
+  float: right;
+  width: 180px;
+  margin: 0 10px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.blue-button {
+  background: #4fa6d3;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: 800;
+  color: white;
+  border-radius: 4px;
+  border: 0;
+  border-radius: 4px;
+  padding: 8px 16px;
+}
 .login-input {
   width: 100%;
   padding: 12px 0;
@@ -64,6 +90,7 @@
 }
 
 .session-submit {
+  font-family: 'Open Sans', sans-serif;
   width: 100%;
   margin-bottom: 12px;
   padding: 12px 0;
