--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+    </style>
+  
   </head>
 
   <body>
