--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,79 +14,59 @@
  *= require_self
  */
 
- html, body, section, article, h1, h2, h3, p {
-   margin: 0;
-   border: 0;
-   padding: 0;
-   font: inherit;
-   text-align: inherit;
-   text-decoration: inherit;
-   color: inherit;
-   background: transparent;
- }
 
- .cf {
+ /* .cf {
    content: "";
    display: block;
    clear: both;
- }
+ } */
 
  html {
-   background: rgba(39,58,75,.97);
+   display: block;
+   /* background: rgba(39,58,75,.97); */
+   background-image: url('towers_blue.jpg');
    color: white;
    font-family: 'Open Sans', sans-serif;
-   display: block;
  }
 
- .modal-background {
-   position: fixed;
-   top: 0;
-   bottom: 0;
-   right: 0;
-   left: 0;
-   background: rgba(0, 0, 0, 0.7);
-   z-index: 10;
- }
-
- .modal-child {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   min-width: 300px;
-   padding: 20px;
-   background: #f5f9fc;
-   border: solid 1px black;
-   border-radius: 4px;
-   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
- }
-
-.modal-header {
-  display: flex;
-  justify-content: space-around;
-  color: #586573;
-  font-size: 13px;
+.logo {
+  display: inline-block;
+  padding: 20px;
+  font-weight: 600;
+  font-size: 20px;
 }
 
-.login-signup {
-  float: right;
-  width: 180px;
-  margin: 0 10px;
-  display: flex;
-  justify-content: space-around;
+button {
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 4px;
+  border: 0;
 }
 
 .blue-button {
   background: #4fa6d3;
-  font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   font-weight: 800;
-  color: white;
-  border-radius: 4px;
-  border: 0;
-  border-radius: 4px;
   padding: 8px 16px;
 }
+
+.session-submit {
+  background: #50b348;
+  font-size: 13px;
+  width: 100%;
+  margin-bottom: 12px;
+  padding: 12px 0;
+}
+
+.login-signup {
+  display: inline-block;
+  float: right;
+  width: 180px;
+  margin: 20px 10px;
+  display: flex;
+  justify-content: space-around;
+}
+
 .login-input {
   width: 100%;
   padding: 12px 0;
@@ -94,16 +74,4 @@
   border: 1px solid rgba(10,30,44,.15);
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(10,30,44,.05);
-}
-
-.session-submit {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 13px;
-  width: 100%;
-  margin-bottom: 12px;
-  padding: 12px 0;
-  background: #50b348;
-  color: white;
-  border: 0;
-  border-radius: 4px;
 }
