--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-    </style>
-  
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
+    rel="stylesheet">
+
   </head>
 
   <body>
