--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <script type="text/javascript">
+      window.towers = "<%= image_url('towers_blue.jpg') %>"
+    </script>
+
     <%= yield %>
   </body>
 </html>
