Fix splash styling and render, build out nav bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@
    display: block;
    /* background: rgba(39,58,75,.97); */
    background-image: image-url('towers_blue.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
    color: white;
    font-family: 'Open Sans', sans-serif;
  }
