--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -35,6 +35,6 @@ button {
   appearance: none;
 }
 
-button, input[type="submit"] {
+button, input[type="submit"], .span-input {
   cursor: pointer;
 }
