--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -3,18 +3,17 @@ button {
   font-family: 'Open Sans', sans-serif;
   border-radius: 4px;
   border: 0;
+  font-size: 12px;
 }
 
 .blue-button {
   background: #4fa6d3;
-  font-size: 12px;
   font-weight: 800;
   padding: 8px 16px;
 }
 
 .green-button {
   background: #50b348;
-  font-size: 13px;
   width: 100%;
   margin-bottom: 12px;
   padding: 12px 0;
@@ -22,8 +21,9 @@ button {
 }
 
 .login-form-input {
+  color: black;
   width: 100%;
-  padding: 12px 0;
+  height: 50px;
   margin: 10px;
   border: 1px solid rgba(10,30,44,.15);
   border-radius: 4px;
