--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,15 +1,32 @@
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
 .logo {
+  display: inline-block;
+  margin: 20px 80px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.nav-link {
   display: inline-block;
   padding: 20px;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 13px;
+  color: #cdd9e4;
 }
 
 .nav-start-session {
   display: inline-block;
   float: right;
   width: 180px;
-  margin: 20px 10px;
+  margin: 20px 80px;
   display: flex;
   justify-content: space-around;
+}
+
+.nav-el {
+  color: #cdd9e4;
 }
