--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -18,7 +18,7 @@
   color: #cdd9e4;
 }
 
-.nav-start-session {
+.nav-start-session, .user-avatar {
   display: inline-block;
   float: right;
   width: 180px;
