Update background image styling and rename backend 'cloudcasts' to 'casts'

--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -1,3 +1,10 @@
+.splash-page {
+  height: 100vh;
+  background-image: image-url('towers_blue.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
 .splash-page {
   display: flex;
