Fix session render and redirect, add more styling

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -7,6 +7,7 @@
 .logo {
   display: inline-block;
   margin: 20px 80px;
+  color: white;
   font-weight: 600;
   font-size: 20px;
 }
@@ -20,6 +21,7 @@
 }
 
 .nav-start-session, .user-avatar {
+  color: white;
   display: inline-block;
   float: right;
   width: 180px;
