--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -5,19 +5,28 @@
   background-size: cover;
 }
 
-
-.splash-page {
+.splash-content {
+  position: relative;
+  top: 100px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .splash-title {
-  font-size: 48px;
+  padding: 0 20px;
+  color: white;
+  font-size: 60px;
   font-weight: 300;
+  letter-spacing: -1px;
+  text-shadow: 0 2px 4px rgba(52,73,94,.2);
 }
 
 .splash-tagline {
+  color: white;
   font-size: 14px;
-  font-weight: 300;
+  font-weight: 400;
+  opacity: .7;
 }
