--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -1,3 +1,15 @@
 h2 {
   color: #697f95;
+  font-weight: 400;
+  margin: 0 140px;
+  font-size: 20px;
+}
+
+h3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #697f95;
+  font-size: 12px;
+  font-weight: 400;
 }
