--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -37,3 +37,25 @@
 .modal-list > li:hover {
   color: black;
 }
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-form-input {
+  color: black;
+  width: 100%;
+  margin: 10px;
+  padding: 12px 0;
+  border: 1px solid rgba(10,30,44,.15);
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(10,30,44,.05);
+}
+
+.login-submit {
+  width: 100%;
+  border: 1px solid #f5f9fc;
+  box-shadow: 0 1px 1px rgba(10,30,44,.05);
+}
