--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -17,16 +17,36 @@
 
 .splash-title {
   padding: 0 20px;
-  color: white;
   font-size: 60px;
   font-weight: 300;
+  color: white;
   letter-spacing: -1px;
   text-shadow: 0 2px 4px rgba(52,73,94,.2);
 }
 
 .splash-tagline {
-  color: white;
   font-size: 14px;
   font-weight: 400;
+  color: white;
   opacity: .7;
+}
+
+.splash-three-assets {
+  display: flex;
+  margin-top: 100px;
+}
+
+.splash-asset-cell {
+  flex-direction: column;
+  text-align: center;
+  width: 225px;
+  margin: 0 60px;
+}
+
+.splash-asset-title {
+  margin: 0 auto;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
+  letter-spacing: 1px;
 }
