--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -8,14 +8,12 @@
   z-index: 10;
 }
 
-.modal-child {
+.modal-container {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 300px;
-  padding: 20px;
-  background: #f5f9fc;
   border: solid 1px black;
   border-radius: 4px;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
@@ -38,24 +36,66 @@
   color: black;
 }
 
-.login-form {
+.modal-body {
+  background: #f5f9fc;
+  padding: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.login-form-input {
-  color: black;
+.modal-errors {
+  text-align: center;
+  background: #fdf5f5;
+  color: #e2584e;
   width: 100%;
+  // border-radius: 4px;
+  // border: 1px solid #e2584e;
+}
+
+.modal-form-input {
+  background: white;
+  color: black;
+  font-size: 12px;
+  width: 90%;
   margin: 10px;
-  padding: 12px 0;
+  padding: 12px;
   border: 1px solid rgba(10,30,44,.15);
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(10,30,44,.05);
 }
 
-.login-submit {
-  width: 100%;
+.modal-submit {
+  text-align: center;
+  color: white;
+  background: #50b348;
+  margin-bottom: 12px;
+  padding: 12px;
+  border-radius: 4px;
+  width: 90%;
   border: 1px solid #f5f9fc;
   box-shadow: 0 1px 1px rgba(10,30,44,.05);
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: center;
+}
+
+.modal-footer-text {
+  margin: 0;
+  margin-top: 5px;
+  padding: 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: rgba(88,101,115,.7);
+}
+
+.modal-footer-toggle {
+  margin: 0;
+  margin-top: 5px;
+  padding: 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: #4fa6d3;
 }
