--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,6 +1,8 @@
 .nav-bar {
   display: flex;
   justify-content: space-between;
+  position: relative;
+  min-height: 52px;
   background: rgba(39,58,75,.97);
 }
 
@@ -32,4 +34,42 @@
 
 .nav-el {
   color: #cdd9e4;
+}
+
+.dropdown-menu {
+	position: absolute;
+	top: 30px;
+	right: 0;
+	background-color: #fff;
+	border: 1px solid gray;
+	border-radius: 3px;
+	padding: 10px;
+	width: 225px;
+	z-index: 1;
+	color: gray;
+	text-align: left;
+	box-shadow: -1px 4px 6px 1px rgba(0,0,0,0.09);
+	font-weight: initial;
+}
+
+.dropdown-menu {
+	border-bottom: 1px solid gray;
+}
+
+.gear-dropdown .editions li,
+.gear-dropdown .help li {
+	margin: 5px 0;
+	cursor: pointer;
+	border-radius: 3px;
+	font-size: 12px;
+}
+
+.dropdown-menu a {
+	display: block;
+	padding: 5px 5px;
+}
+
+.fa fa-angle-down {
+  font-size: 100px;
+  color: red;
 }
