--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -23,6 +23,7 @@
   background: #fff;
   color: #586573;
   border-bottom: 3px solid #ebf0f2;
+  border-radius: 4px 4px 0 0;
 }
 
 .modal-list {
@@ -42,6 +43,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 0 0 4px 4px;
 }
 
 .modal-errors {
@@ -49,8 +51,8 @@
   background: #fdf5f5;
   color: #e2584e;
   width: 100%;
-  // border-radius: 4px;
-  // border: 1px solid #e2584e;
+  border-radius: 4px;
+  border: 1px solid #e2584e;
 }
 
 .modal-form-input {
