--- a/app/assets/stylesheets/components/upload.scss
+++ b/app/assets/stylesheets/components/upload.scss
@@ -1,6 +1,5 @@
 .upload-content, .form-body {
   position: relative;
-
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -35,4 +34,14 @@
   font-family: 'Open Sans', sans-serif;
   margin: 20px;
   // background: #4fa6d3;
+}
+
+.content-message {
+  text-align: center;
+  background: #fcf1e2;
+  color: #e79e35;
+  padding: 10px 14px;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #e79e35;
 }
