--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -43,3 +43,12 @@ button {
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(10,30,44,.05);
 }
+
+.render-errors {
+  text-align: center;
+  background: #fdf5f5;
+  color: #e2584e;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #e2584e;
+}
