--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -29,10 +29,7 @@ button {
   border-bottom: 2px solid #ebf0f2;
 }
 
-.form-body {
-}
-
-.form-input {
+.form-input-field {
   background: white;
   color: black;
   font-size: 12px;
@@ -51,4 +48,19 @@ button {
   width: 100%;
   border-radius: 4px;
   border: 1px solid #e2584e;
+}
+
+.cast-edit {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.form-actions {
+  display: inline-block;
+  float: right;
+  width: 180px;
+  margin: 20px 80px;
+  flex-direction: row;
+  justify-content: space-around;
 }
