--- a/app/assets/stylesheets/components/upload.scss
+++ b/app/assets/stylesheets/components/upload.scss
@@ -37,11 +37,16 @@
 }
 
 .content-message {
-  text-align: center;
+  // text-align: left;
   background: #fcf1e2;
   color: #e79e35;
   padding: 10px 30px;
   width: 100%;
   border-radius: 4px;
   border: 1px solid #e79e35;
+}
+
+.cancel-submit {
+  color: #8196a7;
+  font-size: 13px;
 }
