--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -9,14 +9,14 @@ button {
 
 .blue-button {
   background: #4fa6d3;
-  font-weight: 800;
+  font-weight: 600;
   padding: 8px 16px;
 }
 
 .green-button {
   background: #50b348;
-  font-weight: 800;
-  padding: 8px 16px;
+  font-weight: 600;
+  padding: 8px 20px;
 }
 
 .upload-form {
@@ -59,5 +59,6 @@ button {
 .upload-form-actions {
   width: 180px;
   margin: 20px 80px;
-  align-self: baseline;
+  display: flex;
+  flex-direction: row;
 }
