--- a/app/assets/stylesheets/components/upload.scss
+++ b/app/assets/stylesheets/components/upload.scss
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+.edit-form-body {
+  position: relative;
+  margin: 0 auto;
+  min-width: 600px;
+}
+
 .upload-three-assets {
   display: flex;
   margin-top: 0px;
@@ -48,5 +54,6 @@
 
 .cancel-submit {
   color: #8196a7;
-  font-size: 13px;
+  font-size: 15px;
+  padding: 0 30px 0 0;
 }
