--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -22,11 +22,13 @@ button {
 .upload-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .document-title {
   padding: 20px;
-  border-bottom: 2px solid #ebf0f2;
+  align-self: flex-start;
+  // border-bottom: 2px solid #ebf0f2;
 }
 
 .form-input-field {
@@ -41,13 +43,23 @@ button {
   box-shadow: 0 1px 1px rgba(10,30,44,.05);
 }
 
-.render-errors {
+.render-session-errors {
   text-align: center;
   background: #fdf5f5;
   color: #e2584e;
   width: 100%;
   border-radius: 4px;
   border: 1px solid #e2584e;
+}
+
+.render-upload-errors {
+  text-align: center;
+  background: #fdf5f5;
+  color: #e2584e;
+  width: 68%;
+  border-radius: 4px;
+  border: 1px solid #e2584e;
+  margin: 20px;
 }
 
 .cast-edit-content {
