Style demo login

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -11,6 +11,14 @@ button {
   background: #4fa6d3;
   font-weight: 600;
   padding: 8px 16px;
+  margin: 5px;
+}
+
+.navy-button {
+  background: #3b5998;
+  font-weight: 600;
+  padding: 8px 16px;
+  margin: 5px;
 }
 
 .green-button {
