--- a/app/assets/stylesheets/components/upload.scss
+++ b/app/assets/stylesheets/components/upload.scss
@@ -36,11 +36,29 @@
   letter-spacing: 1px;
 }
 
-.file-upload-button {
-  font-family: 'Open Sans', sans-serif;
-  margin: 20px;
-  // background: #4fa6d3;
-}
+// .file-upload-button {
+//   width: 0.1px;
+//   height: 0.1px;
+//   opacity: 0;
+//   overflow: hidden;
+//   position: absolute;
+//   z-index: -1;
+// }
+//
+// .style-file-upload {
+//   color: white;
+//   font-family: 'Open Sans', sans-serif;
+//   border-radius: 4px;
+//   border: 0;
+//   font-size: 12px;
+//   text-align: center;
+//   background: #4fa6d3;
+//   display: inline-block;
+//   cursor: pointer;
+//   font-weight: 600;
+//   padding: 8px 16px;
+//   margin: 5px;
+// }
 
 .content-message {
   // text-align: left;
