--- a/app/assets/stylesheets/components/cast_item.scss
+++ b/app/assets/stylesheets/components/cast_item.scss
@@ -19,15 +19,38 @@
   background: #beccd5;
 }
 
-.cast-text-info {
+.index-play-button {
+  color: #49596a;
+  font-size: 50px;
+  cursor: pointer;
+  margin: 0 40px;
+}
+
+.show-play-button {
+  color: white;
+  font-size: 80px;
+  cursor: pointer;
+  margin: 20px;
+}
+
+.cast-show-el {
+  display: flex;
+}
+
+.cast-index-text-info {
   position: relative;
-  padding-left: 255px;
   min-height: 64px;
+}
+
+.cast-show-text-info {
+  position: relative;
+  min-height: 64px;
+  margin: 20px;
 }
 
 .cast-index-title {
   color: #49596a;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
   padding-bottom: 2px;
 }
