--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -5,15 +5,17 @@
 }
 
 .cast-show-title {
-  font-size: 32px;
+  font-size: 56px;
   font-weight: 300;
   color: white;
   letter-spacing: -1px;
   text-shadow: 0 2px 4px rgba(52,73,94,.2);
 }
 
-.cast-author {
-  font-size: 14px;
+.cast-show-creator {
+  font-size: 24px;
+  padding: 0 4px;
+  color: white;
 }
 
 .show-page-body {
