Fix toggling from cast to cast

--- a/app/assets/stylesheets/components/playback_bar.scss
+++ b/app/assets/stylesheets/components/playback_bar.scss
@@ -39,5 +39,8 @@
 }
 
 .progress-bar-container {
-  margin: 0 20px;
+  margin: 20px 20px;
+  border-radius: 5px;
+  // width: 100%;
+  box-sizing: content-box;
 }
