--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -35,7 +35,7 @@
 .show-page-body {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
+  margin: 20px 100px;
   align-items: flex-start;
 }
 
