--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -14,12 +14,20 @@
   font-size: 20px;
 }
 
+.logo:hover {
+  color: #cdd9e4;
+}
+
 .nav-link {
   display: inline-block;
   padding: 20px;
   font-weight: 600;
   font-size: 13px;
   color: #cdd9e4;
+}
+
+.nav-link:hover {
+  color: white;
 }
 
 .nav-start-session {
