Add active hover

--- a/app/assets/stylesheets/components/cast_item.scss
+++ b/app/assets/stylesheets/components/cast_item.scss
@@ -55,9 +55,17 @@
   padding-bottom: 2px;
 }
 
+.cast-index-title:hover {
+  color: #4fa6d3;
+}
+
 .cast-author {
   color: #4fa6d3;
   margin-bottom: 12px;
+}
+
+.cast-author:hover {
+  color: #2b7fab;
 }
 
 .item-el {
