--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -25,6 +25,10 @@
   color: white;
 }
 
+.cast-show-title:hover, .cast-show-creator:hover {
+  color: #cdd9e4;
+}
+
 .user-page-content {
   display: flex;
   justify-content: space-around;
@@ -70,6 +74,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.user-location {
+  color: #49596a;
+  font-size: 20px;
+  font-weight: 400;
+  padding-bottom: 2px;
 }
 
 .user-bio {
