--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -14,6 +14,10 @@ button {
   margin: 5px;
 }
 
+.blue-button:hover {
+  background: #2b7fab;
+}
+
 .navy-button {
   background: #3b5998;
   font-weight: 600;
@@ -26,6 +30,10 @@ button {
   font-weight: 600;
   padding: 8px 20px;
   max-width: 130px;
+}
+
+.green-button:hover {
+  background: #3d8937;
 }
 
 .user-form-content {
