Add active hover

--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -64,6 +64,10 @@
   border-radius: 4px;
 }
 
+.cast-action-title:hover {
+  color: #4fa6d3;
+}
+
 .user-page-body {
   display: flex;
   justify-content: space-around;
