Update css styling

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -25,6 +25,10 @@ button {
   margin: 5px;
 }
 
+.navy-button:hover {
+  background: #30487c;
+}
+
 .green-button {
   background: #50b348;
   font-weight: 600;
