--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
       window.towers = "<%= image_url('towers_blue.jpg') %>"
     </script>
 
+    <script type="text/javascript">
+      window.cloudLogo = "<%= image_url('cloud_logo.png') %>"
+    </script>
+
     <%= yield %>
   </body>
 </html>
