--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,6 +4,7 @@
       "api/users/user.json.jbuilder",
       user:current_user
     ).html_safe %>
+    window.currentUser = window.currentUser.user
   </script>
 <% end %>
 
