Fix user profile image patch

--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -35,6 +35,6 @@ button {
   appearance: none;
 }
 
-button, input[type="submit"], .span-input {
+button, input[type="submit"], .span-input, .cast-action-title {
   cursor: pointer;
 }
