--- a/app/assets/stylesheets/components/playback_bar.scss
+++ b/app/assets/stylesheets/components/playback_bar.scss
@@ -12,9 +12,9 @@
   z-index: 1;
 }
 
-.cast-img-playback {
-  width: 52px;
-  height: 52px;
+.playback-bar img{
+  max-width: 52px;
+  max-height: 52px;
 }
 
 .playback-play-icon {
