--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -24,9 +24,8 @@
 }
 
 .user-page-content img {
-  height: 160px;
-  width: 160px;
-  background: #beccd5;
+  max-height: 160px;
+  max-width: 160px;
   border: 1px solid white;
   border-radius: 4px;
 }
