--- a/app/assets/stylesheets/components/show.scss
+++ b/app/assets/stylesheets/components/show.scss
@@ -28,6 +28,8 @@
   max-width: 160px;
   border: 1px solid white;
   border-radius: 4px;
+  position: relative;
+  top: -80px;
 }
 
 .cast-show-title {
